change: Cleaned up less files - Removed less files that weren't being used - Moved development less files from /modules to /dev - Moved development less files from site.less into guide.less - Changed print.less to use reference(site.less) - Alphabetized imports

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -26,7 +26,6 @@ body {
     text-align:         left;
 }
 
-
 #logo {
     padding:            15px 0px 15px 0px;
 }
@@ -543,8 +542,15 @@ div.tooltip:before {
 /***************************************************************************
 * Modules that are currently in development
 */
-@import "modules/template-letter";
-@import "modules/energy-comparison";
-@import "modules/digital-lab";
-@import "modules/local";
-@import "modules/switch";
+
+@import "dev/digital-lab";
+@import "dev/energy-comparison";
+@import "dev/home.less";
+@import "dev/landing.less";
+@import "dev/local";
+@import "dev/main-nav-beta.less";
+@import "dev/main-nav-v1";
+@import "dev/main-nav-v2";
+@import "dev/main-nav-v3";
+@import "dev/switch";
+@import "dev/template-letter";
