dev: update research mockup

--- a/libs/guide/story.less
+++ b/libs/guide/story.less
@@ -1,24 +1,46 @@
 // Story styles for the policy mockup page
 
-.story-lead {
+.story-masthead {
     height: 50vw;
-    max-height: 100vw;
-    background-color: lighten(@heritage-blue, 8%);
-    opacity: 0.5;
-    margin-top: -2rem;
-    
-    &:after {
-        height: 50vw;
-        max-height: 100vw;
-        content: "";
-        background: url(https://c1.staticflickr.com/8/7577/15858580416_85d04e067c_k.jpg);
-        background-size: cover;
-        opacity: 0.5;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
+    max-height: 80vw;
+    position: relative;
+    background: @heritage-blue;
+    margin-top: -1.8rem;
+    overflow: hidden;
+    .story-masthead--content {
+        position: relative;
+        top: 30%;
+        h1 {
+            font-size: @font-size-largest;
+            text-align: center;
+            z-index: 2;
+            position: relative;
+            color: @white;
+            }
+        p {
+            font-size: @font-size-medium;
+            text-align: center;
+            z-index: 2;
+            position: relative;
+            color: @white;
+        }
+    }   
+    img {
+        background-color: @heritage-blue;
         position: absolute;
-        z-index: -1;   
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: auto;
+        opacity: 0.4;
+        z-index: 1;
     }
+}
+
+cite {
+    display: block;
+    margin: .5rem 0;
+    color: @text-color;
+    font-size: @font-size-small;
+    z-index: 2;
 }
