dev: colour variable in landing.less

--- a/libs/dev/landing.less
+++ b/libs/dev/landing.less
@@ -8,6 +8,11 @@
 	clear: both;
 }
 
+.fullwidth-blue-lighter {
+    background-color: @heritage-blue-lighter;
+    clear: both;
+}
+
 .fullwidth-aqua {
 	background-color: @aqua-light;
 	clear: both;
