dev: update visual of research report

--- a/libs/jade/dev/policy/income.jade
+++ b/libs/jade/dev/policy/income.jade
@@ -278,7 +278,7 @@ block content
                         p people work on either zero hours or agency contracts
                 .col-md-1
                 .col-md-6
-                    h3 Employment levels
+                    h2 Employment levels
                     p The numbers of people in insecure work have remained fairly constant since 2011 and have not fallen back to pre-recession levels. So despite record employment rates, the persistence of insecure work leaves many households at continued risk of economic shocks, and unable to plan for the future.
                     
                     h3 What factors matter to workers?
@@ -314,17 +314,21 @@ block content
             .flex-row
                 .col-md-1
                 .col-md-6
-                    h3 Insecurity at work is more of a problem for some groups than others
+                    h2 Insecurity at work is more of a problem for some groups than others
                     p Our research also found that some groups are more likely to experience insecurity - both in terms of their income and in employment more widely.
 
                     p Kayley Hignell, Head of Policy at Citizens Advice says 
                     p "How much money people are paid is important to them but our research reveals the security of that income is also vital. Knowing how many hours you’ll be asked to work and when, if you’re entitled to sick leave or holiday pay, and whether you’ll still have a job in six months’ time are all key to feeling secure."
                     p “Without income security, budgeting can be impossible and people struggle to save or plan for their futures.”
                 .col-md-4
-                    img(src="#{dir}images/icons/clock.svg" style="max-width:20%;")
+                    img(src="#{dir}images/icons/dialogue_happy.svg" style="max-width:20%; margin-top:2rem;")
                     .data-display
                         h3 84%
                         p of people say a steady income helps them cope with stress
+                    img(src="#{dir}images/icons/graph_rising.svg" style="max-width:20%; margin-top:2rem;")
+                    .data-display
+                        h3 83%
+                        p of people say a steady income increases productivity
                 .col-md-1
 
     .fullwidth-yellow
