--- a/libs/jade/dev/policy/income.jade
+++ b/libs/jade/dev/policy/income.jade
@@ -170,7 +170,7 @@ block script
                     data: [54]
                 },
                         {
-                    name: 'Thriving local high street',
+                    name: 'Thriving high street',
                     data: [49]
                 }],
                 navigation: {
@@ -215,7 +215,7 @@ block script
                     enabled: false
                 },
                 series: [{
-                    name: 'Forecast of interest rate rises',
+                    name: 'Interest rate rises',
                     data: [20]
                 },
                         {
