dev: research update chart key

--- a/libs/jade/dev/policy/income.jade
+++ b/libs/jade/dev/policy/income.jade
@@ -38,7 +38,7 @@ block script
                 },
                 tooltip: {
                     formatter: function () {
-                        return this.series.name + ': <b>£' + Highcharts.numberFormat(this.y,2,'.',',') + '</b>';
+                        return this.series.name + ': <b>' + Highcharts.numberFormat(this.y,2,'.',',') + '%</b>';
                     }
                 },
                 credits: {
@@ -97,7 +97,7 @@ block script
                 },
                 tooltip: {
                     formatter: function () {
-                        return this.series.name + ': <b>£' + Highcharts.numberFormat(this.y,2,'.',',') + '</b>';
+                        return this.series.name + ': <b>' + Highcharts.numberFormat(this.y,2,'.',',') + '%</b>';
                     }
                 },
                 credits: {
