dev: research update

--- a/libs/jade/dev/policy/income.jade
+++ b/libs/jade/dev/policy/income.jade
@@ -249,9 +249,10 @@ block content
             .flex-row
                 .col-md-1
                 .col-md-6
-                    h3 Background
+                    h2 Background
                     p The recent introduction of the national living wage and #[a(href="https://www.gov.uk/income-tax-rates/current-rates-and-allowances") tax-free personal allowance] are aimed at increasing income for working households.
 
+                    h3 Our research
                     p New evidence from Citizens Advice reveals the security of that income – and of people’s employment in general – has been an overlooked piece of the labour market puzzle.
 
                     p Income security was seen as more important than the job’s location, or its opportunities for advancement.
