--- a/libs/jade/branding/brand-icons.jade
+++ b/libs/jade/branding/brand-icons.jade
@@ -1,3 +1,6 @@
+// Documentation page: Examples of brand icons 
+// url: ../branding/brand-icons.html
+
 block settings
 	- var title = "Brand icons"
 	- var sidebar = true
