--- a/libs/jade/dev/feedback/feedback-public.jade
+++ b/libs/jade/dev/feedback/feedback-public.jade
@@ -39,7 +39,7 @@ block feedback
 			.fieldset
 				label(for="wrong") What were you doing?
 				input#wrong(placeholder="", type="text")
-			a#send.btn Send
+			a#send.btn.tick-button-icon Send
 		#feedback-confirmation.main-content__right(style="text-align:left;margin-bottom:1rem;display:none")
 			p Thank you for your feedback.
 			p If you're looking for advice you can contact your #[a local bureau]. You can also contact the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
