--- a/libs/modules/speech-lines.less
+++ b/libs/modules/speech-lines.less
@@ -4,8 +4,11 @@
  * see speech-lines.html
  */
 
-.speech-lines (@speech-line-color: @heritage-blue;)  {
-    border-bottom: .5rem solid @speech-line-color;
+.speech-lines (
+        @speech-line-color: @heritage-blue;
+        @speech-line-size: @box-spacing*.5;
+    )  {
+    border-bottom: @speech-line-size solid @speech-line-color;
     padding-bottom: .75rem;
     margin-bottom: 2rem;
     h1,
@@ -28,7 +31,7 @@
         height: 40px;
         margin: 4px 0 0 20%;
         position: absolute;
-        border: solid 8px @speech-line-color;
+        border: solid @speech-line-size @speech-line-color;
         border-color: transparent transparent @speech-line-color transparent;
         border-radius: 0px 10px 60px 0px;
         background-color: white;
@@ -39,6 +42,13 @@
 .speech-lines {
     .speech-lines (
         @heritage-blue
+    );
+}
+
+.speech-lines-none {
+    .speech-lines (
+        @heritage-blue,
+        @box-spacing*0
     );
 }
 
