--- a/libs/jade/dev/feedback/feedback-public.jade
+++ b/libs/jade/dev/feedback/feedback-public.jade
@@ -19,7 +19,7 @@ block sidebar
 block script
 	script.
 		$('#feedback-link').on('click', function(){
-			$('#feedback-form').toggle();
+			$('#feedback-form').slideToggle('fast');
 		})
 		$('#send').on('click', function(){
 			$('#feedback-content').hide();
@@ -31,18 +31,18 @@ block feedback
 	p Is there anything wrong with this page? #[a#feedback-link Let us know].
 	#feedback-form
 		#feedback-content
-			p If you're looking for advice you can contact your #[a local bureau]. You can also contact the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
-			p Don’t include personal or financial information, eg National Insurance number or credit card details
+			p If you're looking for advice you can #[a contact Citizens Advice] or #[a find your local bureau]. You can also contact the #[a Citizens Advice consumer helpline] on #[strong 03454&nbsp;04&nbsp;05&nbsp;06].
+			p If you've had an issue with this page, don’t include personal or financial information such as National Insurance number or credit card details.
 			.fieldset
-				label(for="doing") What went wrong?
-				input#doing(placeholder="", type="text")
+				label(for="wrong") What went wrong?
+				textarea#wrong
 			.fieldset
-				label(for="wrong") What were you doing?
-				input#wrong(placeholder="", type="text")
+				label(for="doing") What were you expecting?
+				textarea#doing
 			a#send.btn Send
 		#feedback-confirmation.main-content__right(style="text-align:left;margin-bottom:1rem;display:none")
 			p Thank you for your feedback.
-			p If you're looking for advice you can contact your #[a local bureau]. You can also contact the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
+			p If you're looking for advice you can #[a contact Citizens Advice] or #[a find your local bureau]. You can also contact the #[a Citizens Advice consumer helpline] on #[strong 03454&nbsp;04&nbsp;05&nbsp;06].
 
 block content
 	.articleContent
